<resources>
    <string name="app_name">Movie DB</string>
    <string name="action_sort_by">Menu</string>
    <string name="action_sort_by_popularity">Most Popular</string>
    <string name="action_sort_by_rating">Highest Rated</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="content_authority">ie.pegasus.popularmovies2</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="action_sort_by_favorite">Favorites</string>
    <string name="action_share">Share</string>
    <string name="tmdb_api_key">f9c49fc67bf403d0797e6333b70f2bdf</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Released:</string>
    <string name="plot">Plot:</string>
    <string name="details">Details</string>
    <string name="trailer">Trailers:</string>
    <string name="review">Reviews:</string>
    <string name="favourite">Favorite</string>


</resources>
