<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:context="ie.pegasus.popularmovies2.ui.DetailActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="256dp">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/detail_title"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/detail_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:background="@color/background"
                android:padding="5dp"
                android:textColor="@android:color/white"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="66dp"
                tools:layout_conversion_absoluteX="20dp"
                tools:layout_conversion_absoluteY="249dp"/>

            <View
                android:layout_width="@dimen/width_0dp"
                android:layout_height="wrap_content"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="278dp"
                tools:layout_conversion_absoluteX="86dp"
                tools:layout_conversion_absoluteY="249dp"/>
            <TextView
                android:id="@+id/detail_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/plot"
                android:textSize="@dimen/text_size"
                android:padding="5dp"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="364dp"
                tools:layout_conversion_absoluteX="10dp"
                tools:layout_conversion_absoluteY="180dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="@dimen/text_size"
                android:background="@color/background"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="66dp"
                tools:layout_conversion_absoluteX="20dp"
                tools:layout_conversion_absoluteY="249dp"/>

            <View
                android:layout_width="@dimen/width_0dp"
                android:layout_height="wrap_content"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="278dp"
                tools:layout_conversion_absoluteX="86dp"
                tools:layout_conversion_absoluteY="249dp"/>

            <TextView
                android:id="@+id/detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:layout_conversion_absoluteHeight="16dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_conversion_absoluteX="364dp"
                tools:layout_conversion_absoluteY="251dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="@dimen/text_size"
                android:background="@color/background"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="47dp"
                tools:layout_conversion_absoluteX="20dp"
                tools:layout_conversion_absoluteY="278dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="296dp"
                tools:layout_conversion_absoluteX="67dp"
                tools:layout_conversion_absoluteY="278dp"/>

            <TextView
                android:id="@+id/detail_vote_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:padding="5dp"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_conversion_absoluteX="364dp"
                tools:layout_conversion_absoluteY="278dp"/>


            <android.support.v7.widget.CardView
                android:id="@+id/detail_trailers_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@color/background"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_conversion_absoluteX="0dp"
                tools:layout_conversion_absoluteY="170dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trailer"
                        android:textSize="@dimen/text_size"
                        android:background="@color/background"

                        android:padding="5dp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_160dp"
                        android:layout_marginTop="@dimen/margin_20dp">

                        <com.linearlistview.LinearListView
                            android:id="@+id/detail_trailers"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:divider="?android:dividerHorizontal"
                            android:orientation="horizontal"
                            android:showDividers="middle"/>

                    </HorizontalScrollView>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_20dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/detail_reviews_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_conversion_absoluteX="0dp"
                tools:layout_conversion_absoluteY="170dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/review"
                        android:textSize="@dimen/text_size"
                        android:background="@color/background"
                        android:padding="@dimen/margin_5dp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>

                    <com.linearlistview.LinearListView
                        android:id="@+id/detail_reviews"
                        android:padding="@dimen/padding_10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="?android:dividerHorizontal"
                        android:orientation="vertical"
                        android:showDividers="middle"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
